feat: refact and adapting API
